# rust-nostr-server

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
.github/workflows/: check.yaml
benchmark/: nostr.yml  test.sh
src/: db.rs  lib.rs  limiter.rs  server.rs  web.rs
src/middlewear/: ip.rs  mod.rs  time.rs
src/msgapi/: challange.rs  incoming.rs  mod.rs  outgoing.rs  tag.rs
src/msgapi/Inner/: innerClientMessage.rs  mod.rs
